--- a/miniProject.css
+++ b/miniProject.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -10,58 +10,78 @@ body {
   font-family: "Roboto", sans-serif;
   text-align: center;
 }
-nav {
-  border: 2px solid #333;
-  border-radius: 2rem;
-  margin: 0 auto 1rem;
-  max-width: 600px;
-  font-size: 3rem;
-  line-height: 7rem;
+
+.name {
+  padding-top: 30px;
 }
+
 h2 {
-  padding: 1rem;
+  padding: 0.5rem;
   background-color: gold;
   border-radius: 2rem 2rem 0 0;
 }
-ul {
-  list-style: none;
-}
-li {
-  border-top: 1px solid #333;
-}
-li a {
+
+a {
   display: block;
+  text-decoration: none;
+  color: black;
+  padding-top: 10px;
 }
-li a,
-li a:visited {
+a:visited {
   text-decoration: none;
   color: #333;
 }
-li a:hover,
-li a:focus {
-  background: #333;
-  color: whitesmoke;
-  cursor: pointer;
-}
-li:last-child a {
-  border-radius: 0 0 2rem 2rem;
-}
 
 p {
-  margin: 2rem;
+  margin: 1rem;
   font-size: 1.5rem;
 }
 
 p a {
   text-decoration: none;
   color: #333;
-  margin: 3rem;
+  margin: 10px;
 }
-li a:hover {
-  color: crimson;
-  font-weight: 100;
+.first-para {
+  font-size: 1.5rem;
+  font-family: "Inconsolata", monospace;
+  line-height: 2.5rem;
+  padding: 15px;
 }
-p a:hover {
-  color: darkgoldenrod;
+.mca {
+  font-family: "Inconsolata", monospace;
+}
+.bca {
+  font-family: "Inconsolata", monospace;
+}
+.certification {
+  font-family: "Inconsolata", monospace;
+  padding: 15px;
+}
+.certification sub {
+  font-size: 0.9rem;
   font-weight: 900;
+}
+.education {
+  padding: 15px;
+}
+
+.languages-1,
+.languages-2,
+.languages-3,
+.languages-4 {
+  padding: 1px;
+  font-family: "Inconsolata", monospace;
+  word-spacing: 4px;
+  letter-spacing: 3px;
+}
+
+.contact-me {
+  font-weight: 900;
+  font-size: 1.4rem;
+  padding-bottom: 40px;
+  transition: 0.3s;
+}
+.contact-me:hover {
+  font-size: 20px;
 }
